# readeck-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: CHANGELOG_GUIDE.md
scripts/: changelog.py
src/readeck/: __init__.py  client.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_bookmark_create.py  test_bookmark_delete.py  test_bookmark_details.py  test_bookmark_export.py  test_bookmarks.py  test_client.py  test_exceptions.py  test_highlights.py  test_markdown_parsing.py  test_models.py
