[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readeck"
dynamic = ["version"]
description = "Python client library for Readeck APIs"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yash Vanzara", email = "yashvanzara@gmail.com" },
]
keywords = ["readeck", "api", "client", "bookmark", "reader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/yashvanzara/readeck-python"
Documentation = "https://github.com/yashvanzara/readeck-python#readme"
Repository = "https://github.com/yashvanzara/readeck-python"
Issues = "https://github.com/yashvanzara/readeck-python/issues"
Changelog = "https://github.com/yashvanzara/readeck-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/readeck/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/readeck"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "--cov=src/readeck",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "build>=1.2.2.post1",
    "flake8>=7.1.2",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.22.0",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.flake8]
ignore = ["E231"]
