[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readeck"
dynamic = ["version"]
description = "Python client library for Readeck APIs"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yash Vanzara", email = "yashvanzara@gmail.com" },
]
keywords = ["readeck", "api", "client", "bookmark", "reader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/yashvanzara/readeck-python"
Documentation = "https://github.com/yashvanzara/readeck-python#readme"
Repository = "https://github.com/yashvanzara/readeck-python"
Issues = "https://github.com/yashvanzara/readeck-python/issues"
Changelog = "https://github.com/yashvanzara/readeck-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/readeck/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/readeck"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E231"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B017"]  # Allow long lines and blind exceptions in tests

[tool.ruff.lint.isort]
known-first-party = ["readeck"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "--cov=src/readeck",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.4.0",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20250516",
]
